export type Sport = {
  id: number;
  name: string;
};

export const SPORTS_TRANSLATION_EN_TO_DK: Record<string, string> = {
  Tennis: 'Tennis',
  Football: 'Fodbold',
  Basketball: 'Basketball',
  PadelTennis: 'Padel Tennis',
  TableTennis: 'Bordtennis',
  Golf: 'Golf',
  Volleyball: 'Volleyball',
  Badminton: 'Badminton',
  Boxing: 'Boxning',
  Squash: 'Squash',
  Petanque: 'Petanque',
  Hockey: 'Hockey',
  Handball: 'Håndbold',
  Running: 'Løb',
  Biking: 'Cykling',
  Minigolf: 'Minigolf',
  Climbing: 'Klatring',
  Skateboarding: 'Skateboarding',
  Surfing: 'Surfing',
  Hiking: 'Vandring',
  UltimateFrisbee: 'Ultimate Frisbee',
  Floorball: 'Floorball',
};
